# beamline-rt-sim

./: .gitignore  CMakeLists.txt  README.md  task_detailed.txt  tasks.txt  technical_details.txt  test_commands.cpp
gui/: app.py  requirements.txt
src/: main.cpp
src/control/: api.hpp  limits.hpp  loop.hpp
src/core/: clock.hpp  pid.hpp  ring_buffer.hpp  telemetry.hpp  watchdog.hpp
src/hw/: bic.hpp  bpm.hpp  iactuator.hpp  isensor.hpp  magnet.hpp  sim_noise.hpp  simple_bic.hpp  simple_bpm.hpp  simple_iactuator.hpp  simple_isensor.hpp  simple_magnet.hpp  simple_noise.hpp
src/ipc/: control_rep.hpp  telemetry_pub.hpp
src/realtime/: performance_optimizer.hpp
src/safety/: beam_loss_monitor.hpp  machine_protection_system.hpp
tests/: stress_test_clock.cpp  stress_test_framework.hpp  stress_test_hw_components.cpp  stress_test_hw_interfaces.cpp  stress_test_noise_sim.cpp  stress_test_pid.cpp  stress_test_ring_buffer.cpp  stress_test_watchdog.cpp  test_control_api.cpp  test_control_rep.cpp  test_hw_components.cpp  test_hw_interfaces.cpp  test_limits.cpp  test_machine_protection.cpp  test_noise_sim.cpp  test_pid.cpp  test_realtime_performance.cpp  test_ring_buffer.cpp  test_rt_loop.cpp  test_telemetry.cpp  test_telemetry_pub.cpp  test_timing.cpp  test_watchdog.cpp
